# backend/src/api/resources/invoice/invoice.controller.js
@@ -32,6 +32,7 @@ export default {
       item: Joi.string().required(),
       date: Joi.date().required(),
       due: Joi.date().required(),
+      client: Joi.string().required(),
       qty: Joi.number().integer().required(),
       tax: Joi.number().optional(),
       rate: Joi.number().optional(),
